// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorDisplay should render Error component with a given message 1`] = `
<DocumentFragment>
  <div
    class="Error"
  >
    <div
      class="Error-Label"
      data-testid="ErrorLabel"
    >
      <span>
         Error  
      </span>
    </div>
    <div
      class="Error-Message"
      data-testid="ErrorMessage"
    >
      My Error
    </div>
  </div>
</DocumentFragment>
`;

exports[`ErrorDisplay should render Error component with a given message and status code 1`] = `
<DocumentFragment>
  <div
    class="Error"
  >
    <div
      class="Error-Label"
      data-testid="ErrorLabel"
    >
      <span>
         Error 599 
      </span>
    </div>
    <div
      class="Error-Message"
      data-testid="ErrorMessage"
    >
      My Error
    </div>
  </div>
</DocumentFragment>
`;
